frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  ports:
    - protocol: TCP
      name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: frontend
status:
  loadBalancer: {}
